Fix spacing between CTA and QR code

--- a/source/css/_subscription-reflexive-style.scss
+++ b/source/css/_subscription-reflexive-style.scss
@@ -58,6 +58,7 @@
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
+    gap: calc(var(--unit) * 2);
 
     #qr-code-block {
       width: calc(var(--unit) * 12);
